html2canvas embed video youtube

--- a/index.html
+++ b/index.html
@@ -15,16 +15,9 @@
 
 
 
-	<body>
-		<iframe 
-        id = "framevideo"
-		  width="760" 
-		  height="415" 
-		  srcdoc="<a href=https://www.youtube.com/embed/Y8Wp3dafaMQ>vidos</a>" 
-		  frameborder="0" 
-		  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
-		  allowfullscreen>Ваш браузер не поддерживает фреймы.</iframe>
-
+	<body id="body">
+		<div id="player"></div>
+      <p id="progress"></p>
 
 		  <form method="post" enctype="multipart/form-data">
 			<div>
