--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<body>
    
          <p id="progress"></p>
-         
+         <p id="count"></p>
          <input id="inputvideo" type="file" accept="video/*" />
 
 
