--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 		<script src="js/script.js"></script>
-      <script src="js/index.js"></script>
 		<script src="https://code.angularjs.org/1.5.8/angular.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
@@ -66,7 +65,7 @@
 		  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
 		  allowfullscreen>Ваш браузер не поддерживает фреймы.</iframe> -->
         <video width = "640" height = "360" id = "loaded-video">
-          <source src="URL">
+          <!--<source src="URL">-->
         </video>
      	</div>
      	<div class="buttons">
@@ -85,7 +84,8 @@
           </div>
         
          <div class="video-result">
-          <iframe id="frameresult" src="url(Biz-Polestar-NIK_8359.jpg)"></iframe>
+           <canvas id="test_canvas" width=426 height=240></canvas>
+           <!--<iframe id="frameresult" src="url(Biz-Polestar-NIK_8359.jpg)"></iframe>-->
          </div>
       </div>
        
