--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
 		  allowfullscreen>Ваш браузер не поддерживает фреймы.</iframe> -->
         <video width="100%" height="360" id="loaded-video">
              <!--<source src="URL">-->
-          <canvas id="calculation-canvas" class="calculation-element">
-          </canvas>
+
         </video>
       </div>
+      <canvas width="640" height="360" id="calculation-canvas" class="calculation-element">
+      </canvas>
    
      	<div class="buttons upload-element">
      		 <button class="btn" id='button-add-video'>ADD VIDEO</button>
