--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
    
      	<div class="buttons upload-element">
      		 <button class="btn" id='button-add-video'>ADD VIDEO</button>
-         <button class="btn right">ADD LINK</button>
+         <button class="btn right" hidden/>ADD LINK</button>
          <input id="inputvideo" type="file" accept="video/*" hidden/> 
      	</div>
 
