--- a/index.html
+++ b/index.html
@@ -76,12 +76,11 @@
 		  frameborder="0" 
 		  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
 		  allowfullscreen>Ваш браузер не поддерживает фреймы.</iframe> -->
-        <video width="100%" height="360" id="loaded-video">
+        <video width="100%" height="100%" id="loaded-video">
              <!--<source src="URL">-->
-
         </video>
       </div>
-      <canvas width="640" height="360" id="calculation-canvas" class="calculation-element">
+      <canvas width="640" height="100%" id="calculation-canvas" class="calculation-element">
       </canvas>
    
      	<div class="buttons upload-element">
