some bugs are fixed in videoconteiners

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
      	    <ul>
      	  	  <li>
               <a href="#">
-               <img src="img/calculation.svg" alt="calculation">Calculation</a>	
+              <img src="img/calculation.svg" alt="calculation">Calculation</a>	
      	    	</li>
             <li>
             	<a href="#">
@@ -65,7 +65,7 @@
      	  	<div class="container-video-selected container-video-upload" id="container-video-upload">Upload video</div>
      	  	<div class="container-video-calculation" id="container-video-calculation" >Calculation</div>
        </div>
-       <div class="select">
+       <div class="select calculation-element">
         <img src="img/btn-select.svg" class="btn-select calculation-element" id = "btn-select-id">
        </div>
 
@@ -80,7 +80,7 @@
              <!--<source src="URL">-->
         </video>
       </div>
-      <canvas width="640" height="100%" id="calculation-canvas" class="calculation-element">
+      <canvas height="360" id="calculation-canvas" class="canvas-translation calculation-element">
       </canvas>
    
      	<div class="buttons upload-element">
