Add speed above rectangle

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 
 
     <div class="container-result">
+    <p class="calculation-element">Please select road section</p>
       <div class="video-result upload-element" >
         <canvas id="test_canvas" width="400" height="240"></canvas>
       </div>
