Single tracking update

--- a/index.html
+++ b/index.html
@@ -107,10 +107,12 @@
     <div class="container-result">
     <p class="calculation-element">Please select road section</p>
       <div class="video-result upload-element" >
+      <p class="upload-element">Please select vehicle</p>
         <canvas id="test_canvas" width="400" height="240"></canvas>
       </div>
       <p class="upload-element" id="progress"></p>
       <div class="result-discribe" hidden>
+       <button class="btn" id="select-vehicle">Select vehicle</button>
         On this segment of the road the cars were selected and their speed will be calculated.
       </div>
 
