Fix speed calculation bug

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </div>
       <p class="upload-element" id="progress"></p>
       <div class="result-discribe" hidden>
-       <button class="btn" id="select-vehicle">Select vehicle</button>
+       <div><button class="btn" id="select-vehicle">Select vehicle</button></div>
         On this segment of the road the cars were selected and their speed will be calculated.
       </div>
 
