Add fast car select

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <p class="upload-element" id="progress"></p>
       <div class="result-discribe" hidden>
        <div><button class="btn" id="select-vehicle">Select vehicle</button></div>
-        On this segment of the road the cars were selected and their speed will be calculated.
+        <p hidden>On this segment of the road the cars were selected and their speed will be calculated.</p>
       </div>
 
       <div class="container-input calculation-element" >
