fix test automation

--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
         <canvas id="test_canvas" width="400" height="240">
         </canvas>        
         
-        <form>
-        <input type="number" id="select_car_x">
-        <input type="number" id="select_car_y">
-        <button id="select_car_coords">S</button>
+        <form class="upload-element">
+        <input class="test_element" type="number" id="select_car_x" width="1px" height="1px">
+        <input class="test_element" type="number" id="select_car_y">
+        <button class="test_element" id="select_car_coords"></button>
         </form>
        
       </div>
@@ -136,6 +136,11 @@
                 <div class="result">Limit, km/h</div>
                   <input type="number" name="speed-limit" value="" placeholder="">
                   <button class="btn submit">SUBMIT</button>   
+                <input class="test_element" type="number" id="start_road_x">
+                <input class="test_element" type="number" id="start_road_y">   
+                <input class="test_element" type="number" id="end_road_x">
+                <input class="test_element" type="number" id="end_road_y">
+                <button class="test_element" id="select_road_coords"></button>
               </form>
             </div>
         </div>
